Implement PUT /devsatte/devfile
